--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ navigation:
   url: /about/
 
 # Author information - author info at the bottom of the post
-author_name: "sunhaojie"
-author_bio: "这里是小孙和小李的恋爱小屋🛖，在此记录着二人的点点滴滴。相知不易，相守更难，我们是幸运的，遇到了双向奔赴的爱情，经历了甜蜜、考验，往后余生，共同守护"
+author_name: "小孙和小李的爱情🛖"
+author_bio: "这里是小孙和小李的恋爱小屋🛖，在此记录着二人的点点滴滴。相知不易，相守更难，我们是幸运的，遇到了双向奔赴的爱情，经历了甜蜜、考验，往后余生，共同守护!!!"
 author_url: "https://520snow.github.com"
 author_location: "Beijing, China"
 author_image: authorimage.jpg
