--- a/_config.yml
+++ b/_config.yml
@@ -6,20 +6,20 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site title
-title: BlogBox
+title: ❄️  爱情小窝 ❄️
 
 # Below the site title
-tagline: Tales of a digital nomad.
+tagline: 小孙和小李的爱情小窝.
 
 # Site logo
 logo:
 
 # A description of your site for social meta tag, search engines, and feed.xml
 description: |
-  BlogBox is a bold theme for the Jekyll blogging platform. Available for purchase at ThemeForest.net.
+  这里是下孙和小李的爱情小窝，只为记录二人之间的点点滴滴，欢迎祝福，禁止转载哟。
 
 # The base hostname & protocol of your site for where absolute urls are needed
-url: https://blogbox.netlify.app
+url: https://520snow.github.com
 
 # The subpath of your site, if you want to host your path on a subpath like on GitHub Pages. e.g. /blog
 baseurl:
@@ -39,8 +39,8 @@ navigation:
   url: /about/
 
 # Author information - author info at the bottom of the post
-author_name: "小孙和小李的爱情🛖"
-author_bio: "这里是小孙和小李的恋爱小屋🛖，在此记录着二人的点点滴滴。相知不易，相守更难，我们是幸运的，遇到了双向奔赴的爱情，经历了甜蜜、考验，往后余生，共同守护!!!"
+author_name: "小孙和小李的爱情小窝"
+author_bio: "这里是小孙和小李的爱情小窝，在此记录着二人的点点滴滴。相知不易，相守更难，我们是幸运的，遇到了双向奔赴的爱情，经历了甜蜜、考验，往后余生，共同守护!!!"
 author_url: "https://520snow.github.com"
 author_location: "Beijing, China"
 author_image: authorimage.jpg
